--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "app",
   "private": "true",
-  "scripts": {
-    "build": "esbuild app/javascript/*.* --bundle --outdir=app/assets/builds",
-    "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css"
-  },
   "dependencies": {
-    "@hotwired/stimulus": "^3.0.0",
-    "@hotwired/turbo-rails": "^7.0.1",
-    "autoprefixer": "^10.3.5",
-    "esbuild": "^0.13.2",
-    "postcss": "^8.3.8",
-    "tailwindcss": "^2.2.15"
+    "@hotwired/stimulus": "^3.0.1",
+    "@hotwired/turbo-rails": "^7.1.1",
+    "autoprefixer": "^10.4.2",
+    "esbuild": "^0.14.11",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.15"
+  },
+  "scripts": {
+    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds",
+    "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css"
   }
 }
